# codax

./: README.md  pyproject.toml  requirements.txt
codax/: __init__.py
codax/nn_cno/: __init__.py
codax/nn_cno/core/: __init__.py  base.py  params.py  report.py  results.py
codax/nn_cno/datasets/: __init__.py  cnodata.py
codax/nn_cno/datasets/working_case_study/: MD-test.csv  PKN-test.sif
codax/nn_cno/io/: __init__.py  cnograph.py  measurements.py  midas.py  midas_normalisation.py  reactions.py  sif.py
codax/nn_cno/misc/: __init__.py
codax/nn_cno/ode/: __init__.py  cnorode.py  graph2symODE.py  logicODE.py
examples/: logicODE_tutorial.ipynb
examples/kpi-permedcoe/: insilicoMIDAS.csv  insilicoSIF.sif
